LU-8778 osd: declare more credits for DNE operations

when a direntry is being removed, OSD may need to update
local representative (agent inodes). reserve additional
credits for these updates.

Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: Ib97381d1d38e920eef2344dbc00819c4e2d1265e
Reviewed-on: http://review.whamcloud.com/23485
Tested-by: Jenkins
Reviewed-by: wangdi <di.wang@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>